# space-shooter

./: Cargo.toml  README.md
assets/audio/music/: ATTRIBUTION.md
assets/audio/sfx/: LICENSE
assets/texture/: ATTRIBUTION.md  LICENSE  asteroid_sheet.ron  black_bg.ron  enemy_1_sheet.ron  enemy_2_sheet.ron  enemy_3_sheet.ron  enemy_4_sheet.ron  enemy_5_sheet.ron  enemy_6_sheet.ron  exhaust_sheet.ron  explosion_green_sheet.ron  explosion_orange_sheet.ron  explosion_sheet.ron  laser_sheet.ron  minigun_sheet.ron  plasma_sheet.ron  player_1_sheet.ron  player_2_sheet.ron  player_texture.ron  powerup_sheet.ron  proton_sheet.ron
config/: bindings.ron  display.ron
src/: assets.rs  audio.rs  fonts.rs  graphics.rs  main.rs
src/component/: clingy_component.rs  enemy_component.rs  enemy_laser_component.rs  energy_component.rs  health_component.rs  laser_component.rs  mod.rs  player_component.rs  player_laser_component.rs  prop_component.rs  shield_component.rs  ship_component.rs  weapon_component.rs
src/component/laser_type/: laser_type.rs  mod.rs  types.rs
src/component/weapon_type/: mod.rs  weapon_type.rs
src/entity/: black_background.rs  enemy_ship.rs  laser.rs  mod.rs  player_ship.rs  prop.rs  shield.rs  weapon.rs
src/state/: game_over_state.rs  loading_state.rs  menu_state.rs  mod.rs  pause_state.rs  space_state.rs
src/system/: background_prop.rs  cling.rs  energy_recovery.rs  game_over.rs  health.rs  laser.rs  laser_collision.rs  laser_firing.rs  laser_movement.rs  mod.rs  player_movement.rs  shield_recovery.rs
